Further parameterize; refactor